adds ping
